# morseytype

./: .gitmodules  Cargo.toml  readme.md
src/: dict.rs  main.rs
