# Cargo.toml
[dependencies]
crossterm = "0.27"
device_query = "0.2.5"
rand = "0.8.5"
serde_json = "1.0.109"
serde = { version = "1.0", features = ["derive"] }
clap = "4.5.40"

[package]
name = "morseytype"
version = "0.1.1"   
edition = "2024"
authors = ["piter231"]
description = "MorseyType is a terminal-based Morse code typing trainer designed to help you improve your Morse code proficiency through structured practice sessions. The application presents words from english vocabulary lists, challenges you to type them in Morse code, and provides real-time performance feedback."
readme = "readme.md"
repository = "https://github.com/piter231/morseytype.git"
license = "MIT"
license-file = "LICENSE"
keywords = ["morseytype", "morse"]



[profile.dev]
opt-level = 3
debug = false
